--- a/fig/conflict.tex
+++ b/fig/conflict.tex
@@ -75,7 +75,7 @@
 		 $\omega_6 = \{\neg x_3, \neg x_6\}$
 	};
 	\node[] (al) at ($(a.south west) + (0, -0.5)$) {$\alpha$ = };
-	\node[] (aa) at ($(a.south) + (0, -0.5)$) {D $\neg x_1$};
+	\node[] (aa) at ($(a.south) + (0, -0.5)$) {D ($\neg x_1$)};
 	
 	\node[text width=2.75cm] (b) at ($(a) + (3.5, 0)$) {
 		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
@@ -85,7 +85,7 @@
 		 $\omega_5 = \{\neg x_3, \neg x_4\}$
 		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
 	};
-	\node[] (bb) at ($(b.south) + (0, -0.5)$) {D $\neg x_6$};
+	\node[] (bb) at ($(b.south) + (0, -0.5)$) {D ($\neg x_6$)};
 	
 	\node[text width=2.75cm] (c) at ($(b) + (3.5, 0)$) {
 		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
@@ -95,7 +95,7 @@
 		 $\omega_5 = \{\neg x_3, \neg x_4\}$
 		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
 	};
-	\node[] (cc) at ($(c.south) + (0, -0.5)$) {D $\neg x_5$};
+	\node[] (cc) at ($(c.south) + (0, -0.5)$) {D ($\neg x_5$)};
 	
 	\node[text width=2.75cm] (d) at ($(c) + (3.5, 0)$) {
 		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
@@ -105,7 +105,7 @@
 		 $\omega_5 = \{\cprop{\neg x_3}, \cred{\neg x_4}\}$
 		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
 	};
-	\node[] (dd) at ($(d.south) + (0, -0.5)$) {P $x_4$};
+	\node[] (dd) at ($(d.south) + (0, -0.5)$) {P ($x_4$)};
 	
 	\node[text width=2.75cm] (e) at ($(d) + (3.5, 0)$) {
 		 $\omega_1 = \{\cred{x_1}, \cred{x_2}, \cblue{x_3}\}$ 
@@ -115,7 +115,7 @@
  		 $\omega_5 = \{\cblue{\neg x_3}, \cred{\neg x_4}\}$
 		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
 	};
-	\node[] (ee) at ($(e.south) + (0, -0.5)$) {P $\neg x_2$};
+	\node[] (ee) at ($(e.south) + (0, -0.5)$) {P ($\neg x_2$)};
 	\node[] (conf) at ($(e.south east) + (0, -0.5)$) {C};
 
 
