--- a/main.bib
+++ b/main.bib
@@ -543,8 +543,56 @@
 }
 
 
+@inproceedings{Russell1994ArtiCI,
+	title={Arti cial Intelligence a Modern Approach},
+	author={Stuart J. Russell and Peter Norvig},
+	year={1994}
+}
 
+@article{darwiche2002knowledge,
+	title={A knowledge compilation map},
+	author={Darwiche, Adnan and Marquis, Pierre},
+	journal={Journal of Artificial Intelligence Research},
+	volume={17},
+	pages={229--264},
+	year={2002}
+}
 
+@article{dowling1984linear,
+	title={Linear-time algorithms for testing the satisfiability of propositional Horn formulae},
+	author={Dowling, William F and Gallier, Jean H},
+	journal={The Journal of Logic Programming},
+	volume={1},
+	number={3},
+	pages={267--284},
+	year={1984},
+	publisher={Elsevier}
+}
 
+@book{moore2011nature,
+	title={The nature of computation},
+	author={Moore, Cristopher and Mertens, Stephan},
+	year={2011},
+	publisher={OUP Oxford}
+}
+@article{valiant1979complexity,
+	title={The complexity of computing the permanent},
+	author={Valiant, Leslie G},
+	journal={Theoretical computer science},
+	volume={8},
+	number={2},
+	pages={189--201},
+	year={1979},
+	publisher={Elsevier}
+}
 
-
+@article{marques1999grasp,
+	title={GRASP: A search algorithm for propositional satisfiability},
+	author={Marques-Silva, Joao P and Sakallah, Karem A},
+	journal={IEEE Transactions on Computers},
+	volume={48},
+	number={5},
+	pages={506--521},
+	year={1999},
+	publisher={IEEE}
+}
