--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -51,8 +51,8 @@ an example of tautologous formula.
  \label{tab:truthtable}
 \end{table}
 \subsection{Normal forms}
-In Boolean logic, it exists some structural properties, called \emph{normal form}.
-To introduce them, we first need to present the concepts of \emph{cube} and \emph{clause}.
+In Boolean logic, it exists some particular form of formula, called \emph{normal form}.
+To introduce some of them, we first need to present the concepts of \emph{cube} and \emph{clause}.
 A \emph{cube} $\gamma$ is a finite conjunction of literals represented equivalently by:
 $$\gamma = \bigwedge_{i=1}^k l_i $$
 A \emph{clause} $\omega$ is a finite disjunction of literals represented equivalently by:
@@ -66,7 +66,7 @@ we say thath $\omega_{1}$ subsumes $\omega_{2}$.
 \emph{Conjunctive Normal Form} (CNF) of a formula is a finite conjunction of clauses represented by
   $$\varphi = \bigwedge_{i=1}^k \omega_i \text{ (or by the set of its clauses } \varphi = \{\omega_i\}_{i \in \llbracket 1,k \rrbracket}\text{)}$$
   
-\emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes represented by:
+\emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes represented by
   $$\varphi = \bigvee_{i=1}^k \gamma_i \text{ (or by the set of its cubes } \varphi = \{\gamma_i\}_{i \in \llbracket 1,k \rrbracket}\text{)}$$
 The following table is a summary of the laws that allow to transform any formula to
 a normal form.
@@ -103,14 +103,14 @@ a normal form.
  \label{tab:laws}
 \end{table}
 Every formula can be transformed into a normal form with different complexity and the resulting formula is 
-\emph{equivalent} to the original one.  
+satisfiability \emph{equivalent}.  
 In other words, every assignment $\alpha$ that satisfies formula $\varphi$  also models the resulting formula $\psi$
 and vice-versa, denoted by $\varphi \equiv \psi$.
  Also, we say that a formula $\psi$ is a \emph{logical consequence} of a formula $\varphi$ if every model of $\varphi$
  is also a model of $\psi$ and is denoted by $\varphi \models \psi$.
 Conjunctive normal form is the input form of state-of-the-art SAT solvers. Any propositional
-formula can be transformed in CNF form with polynomial time. Conversely, DNF form have
-an exponential memory complexity during the transformation.
+formula can be transformed in CNF form with polynomial time\cite{Russell1994ArtiCI}. Conversely, DNF form have
+an exponential memory complexity during the transformation\cite{darwiche2002knowledge}.
 Note that each cube in the problem in DNF form is a solution in the equivalent CNF formulas.
 %\hakan{Sharp SAT = transform CNF to DNF}
 %A formula is said to be \emph{satisfiable} (\sat) if there is at least one assignment that satisfies it;
@@ -161,14 +161,21 @@ Some particular instances of the SAT problem can be computed in polynomial time.
 
 \textbf{2-SAT~\cite{aspvall1979linear}.}
 In this particular form, the given CNF formula contains only binary clauses.
-In this case, it suffices to create a graph in which each clause is transformed into implication. For example, the clause $x \lor y$ will be transformed into $ \neg x \Rightarrow y$ and $\neg y \Rightarrow x$.
-\hakan{REDO}
- After computing \emph{strong connected component} on this graph, to be looking for the positive and negative forms of the same variable, in the same  strong connected component suffices 
-to determine the satisfiability of the formula.
- If it is the case, the formula is \unsat. Otherwise 
-a solution can be deduce and the problem is \sat. This algorithm can be computed in linear time complexity.
+In this case, a graph in which each clause is transformed into implication is created.
+For example, the clause $x \lor y$ will be transformed into $ \neg x \Rightarrow y$ and $\neg y \Rightarrow x$.
+Then, \emph{strong connected component} (SCC) is computed to determine the satisfiability of the formula.
+If  positive and negative literal of the same variable are in the same SCC, the formula is declared unsatisfiable, otherwise 
+a solution can be deduce and the problem is satisfiable. This algorithm can be computed in linear time complexity.
 
-\textbf{Horn SAT.} In this particular form, the given CNF formula contains only Horn clauses. It exists three form
+%In this case, it suffices to create a graph in which each clause is transformed into implication. For example, the clause $x \lor y$ will be transformed into $ \neg x \Rightarrow y$ and $\neg y \Rightarrow x$.
+%To determine the satisfiability of the formula, we need 
+%\hakan{REDO}
+% After computing \emph{strong connected component} on this graph, to be looking for the positive and negative forms of the same variable, in the same  strong connected component suffices 
+%to determine the satisfiability of the formula.
+% If it is the case, the formula is \unsat. Otherwise 
+%a solution can be deduce and the problem is \sat. 
+
+\textbf{Horn SAT.}\cite{dowling1984linear} In this particular form, the given CNF formula contains only Horn clauses. It exists three form
 of Horn clause: \emph{strict Horn clause} that contains only one positive literal and at least one negative literal;
 \emph{positive Horn clause} that contains only one positive literal and no negative literals;
 \emph{negative Horn clause} that contains only negative literals.
@@ -177,16 +184,16 @@ Roughly speaking, it satisfies all unit clauses in cascades. Either an empty cla
 is $\unsat$ or the fix point is reached and the formula is \sat. Like 2-SAT, this algorithm can also be computed
 in linear time complexity.
 
-\textbf{XOR SAT.} In this particular form, each clause contains xor ($\oplus$) operator rather than or ($\lor$).
+\textbf{XOR SAT.}\cite{moore2011nature} In this particular form, each clause contains xor ($\oplus$) operator rather than or ($\lor$).
 This problem can be seen as a system linear equations. Gaussian elimination allows to solve this kind of
 problem is polynomial time.
 %The membership of polynomial class (P) of the particular form of satisfiability problems describes above is a special case of Schaefer's dichotomy theorem~\cite{schaefer1978complexity}.
 \subsection{Some related problems}
-\hakan{todo}
-A different kind of problems related to SAT is presented in this section.
-One of them is sharp-SAT (\#SAT), its purpose is to count the number of solutions in a CNF.
 
-Another related problem is \textit{maximum satisfiability problem} (MAX-SAT). In this case, the problem
+A different kind of problems are related to SAT is.% presented in this section.
+One of them is sharp-SAT (\#SAT)\cite{valiant1979complexity}, its purpose is to count the number of solutions in a CNF.
+
+Another related problem is \textit{maximum satisfiability problem} (MAX-SAT)\cite{biere2009handbook}. In this case, the problem
 is to find the maximum subset of clauses that can be satisfied for a formula. Different variants
 of this problem exist. For example, some constraints must be satisfied (hard clauses) and MAX-SAT
 is applied on the remaining clauses called \emph{soft} clauses.
@@ -201,8 +208,13 @@ it will be found or declare that formula unsatisfiable.
 This section describes different \emph{complete }algorithm to solve a propositional formula.
 
 \subsubsection{A naive algorithm}
+
+
 A naive approach to solve a SAT problem is to try all possible assignments.
 For a propositional formula with $n$ variables, we have $2^n$ assignments (in the worse case).  
+The algorithm first tries an assignment, for example all literals are set to false and other 
+assignments. The algorithm is finished when either  a satisfiable assignment is found and so
+the formula is $\sat$  or all assignment are not satisfying the formula that means the problem is $\unsat$.
 \Cref{fig:naive_algo} illustrates the search tree for a given problem with six variables.
 The  formula presented in the figure has 6 clauses, with 2 ternary clauses and 4 binary clauses.
 %It will be used as an example in different algorithm presented below. 
@@ -222,7 +234,7 @@ the Davis Putnam Logemann Loveland algorithm (DPLL)~\cite{dpll_62}.
 It explores a binary tree using depth first search, as shown in \Cref{algo:dpll}.
 The construction of the tree  relies on a \emph{decision} that is made on \cref{algo:dpll:decision}.
 This gives a variable for which both values are checked, the true value on \cref{algo:dpll:pos} and the false value on \cref{algo:dpll:neg}.
-When a leaf find an inconsistency, called a conflict (\cref{algo:dpll:unsatbranch}) which means that the formula cannot be satisfied with
+When a leaf find an inconsistency(i.e. a variable needs to be set to true and false at the same time), called a conflict (\cref{algo:dpll:unsatbranch}) which means that the formula cannot be satisfied with
 the current assignment, other branches are explored.
 Recursively, when each value of a literal reaches a conflict,
 \emph{backtracks} one level, (\emph{chronological backtracking}).
@@ -248,7 +260,8 @@ the clause $\omega_1$ is not satisfied and it remains 3 variables and so $2^3$ p
 %Moreover, in the DPLL algorithm, application of unit propagation until the fix point is reached leads  to a solution.
 \texttt{assignDecisionLiteral} is an important procedure that responsible of choosing the variable that
 divides the search space. Its objective is to find a literal that will generate a maximum of unit propagations. Intuitively, decision literals can be viewed as "guesses" and propagated literals can be viewed as "deductions". 
-Finding the optimal variable is NP-Hard. Different heuristics exists to choose the decision variable,
+Finding the optimal variable that will generate the maximum number of propagation is NP-Hard\cite{biere2009handbook}.
+ Different heuristics exists to choose the decision variable,
 some of them are presented in~\Cref{sec:heuristics}.
 %\input{algo/puredpll}
 %Another idea introduced by DPLL was \emph{elimination of pure literals},
@@ -259,8 +272,9 @@ some of them are presented in~\Cref{sec:heuristics}.
 \subsubsection{Conflict Driven Clause Learning (CDCL) algorithm}\label{sec:cdcl}
 The principal weakness of DPLL algorithm is to make the same inconsistencies several times
 (principally due to chronological backtracking), leading to  unnecessary CPU usage.\\
-Conflict Driven Clause Learning (CDCL) \cref{algo:cdcl} is a sound and complete algorithm
+Conflict Driven Clause Learning (CDCL) \cite{marques1999grasp} is a sound and complete algorithm
 that overcomes the weakness of DPLL.
+
 \Cref{algo:cdcl} gives an overview of CDCL, Like DPLL,  it walks on a binary search tree.
 Initially, the  assignment is empty and the decision level that 
 indicates the depth of the search tree, noted by $dl$, is set to zero.
